--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:taskAffinity=".activity.MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize">
+            android:windowSoftInputMode="stateUnchanged|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -1094,6 +1094,10 @@
         <package android:name="org.mozilla.fennec_aurora" />
         <package android:name="org.mozilla.klar" />
         <package android:name="org.mozilla.focus" />
+
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
 
         <intent>
             <action android:name="android.intent.action.VIEW" />
