PROCESS_TEXT: link activity state to "open special documents" settings
It's now disabled by default.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1085,7 +1085,7 @@
             android:label="@string/app_name"
             android:exported="true"
             android:targetActivity=".activity.DocumentActivity"
-            android:enabled="true">
+            android:enabled="false">
 
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
